--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
 					<configLocation>google_checks.xml</configLocation>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.6</version>
+			</plugin>
 		</plugins>
 	</reporting>
 	<dependencyManagement>
